fix(listing): fix overflow issue

--- a/src/app/listing/list-view/list-view.component.scss
+++ b/src/app/listing/list-view/list-view.component.scss
@@ -3,5 +3,6 @@
   flex-direction: column;
   align-items: center;
   height: 100vh;
-  overflow: auto;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
